# tipc

./: .gitignore  .travis.yml  ASTFunction_8h_source.html  CMakeLists.txt  md_clion_thin_client.html
.github/workflows/: build-and-test.yml
search/: functions_6.js
src/: AST.cpp  CMakeLists.txt  TIPtree.cpp  TIPtree.h  TIPtreeGen.cpp  TIPtreePrint.cpp  TIPtreeSimpleVisitor.cpp  TIPtreeSimpleVisitor.h  TIPtreeVisitor.h  tipc.cpp
src/catch_tests/: CMakeLists.txt
src/catch_tests/constraints/: CMakeLists.txt  ConstraintGenerationTest.cpp  TypeConstraintTest.cpp
src/catch_tests/solvers/: CMakeLists.txt  MockTerms.h  UnionFindSolverTest.cpp  UnionFindTest.cpp  VarTest.cpp  cons_test.cpp  mock_terms.h  mu_test.cpp  mu_tests.cpp  var_test.cpp
src/catch_tests/types/: CMakeLists.txt  TipAlphaTest.cpp  TipIntTest.cpp  TipMuTest.cpp  TipRefTest.cpp  TipVarTest.cpp  tip_int_test.cpp  tip_mu_test.cpp  tip_var_test.cpp
src/catch_tests/utils/: ASTHelper.cpp  ASTHelper.hpp  CMakeLists.txt  MockTerms.h
src/catch_tests/validators/: CMakeLists.txt  DeclarationsVisitorTest.cpp  UniqueIdentifiersVisitorTest.cpp
src/codegen/: CMakeLists.txt
src/constraints/: CMakeLists.txt  TIPtreeTypeConstraintVisitor.cpp  TIPtreeTypeConstraintVisitor.h  TypeConstraint.cpp  TypeConstraint.h
src/error/: CMakeLists.txt
src/frontend/: CMakeLists.txt
src/frontend/ast/: CMakeLists.txt
src/frontend/prettyprint/: CMakeLists.txt
src/optimizer/: CMakeLists.txt
src/semantic/: CMakeLists.txt
src/semantic/symboltable/: CMakeLists.txt
src/semantic/types/: CMakeLists.txt
src/semantic/types/concrete/: TipCons.cpp
src/semantic/types/constraints/: ConstraintCollector.h  ConstraintHandler.h  ConstraintUnifier.cpp  ConstraintUnifier.h  TypeConstraintCollectVisitor.h  TypeConstraintUnifyVisitor.h  TypeConstraintVisitor.cpp  TypeConstraintVisitor.h
src/semantic/types/solver/: Unifier.cpp  Unifier.h  Unifier2.cpp  Unifier2.h  UnionFind.h  UnionFind.tpp  UnionFind2.cpp  UnionFind2.h
src/semantic/weeding/: CMakeLists.txt
src/solvers/: CMakeLists.txt  Cons.cpp  Cons.hpp  Mu.cpp  Mu.hpp  Term.hpp  TermOps.cpp  TermOps.hpp  UnificationError.cpp  UnificationError.hpp  UnionFind.cpp  UnionFind.h  UnionFindSolver.cpp  UnionFindSolver.hpp  Var.cpp  Var.h  Var.hpp  cons.cpp  cons.hpp  mu.cpp  mu.hpp  term.hpp  term_ops.cpp  term_ops.hpp  var.cpp  var.hpp
src/types/: AstToTypeVarMapper.cpp  AstToTypeVarMapper.h  CMakeLists.txt  TIPtreeTypeConstraintVisitor.cpp  TIPtreeTypeConstraintVisitor.h  TipAlpha.cpp  TipAlpha.hpp  TipFunction.cpp  TipFunction.hpp  TipInt.cpp  TipInt.hpp  TipMu.cpp  TipMu.hpp  TipRecord.cpp  TipRecord.h  TipRef.cpp  TipRef.hpp  TipType.cpp  TipType.hpp  TipTypeOps.cpp  TipTypeOps.h  TipVar.cpp  TipVar.hpp  TypeConstraint.cpp  TypeConstraint.h  tip_alpha.cpp  tip_alpha.hpp  tip_function.cpp  tip_function.hpp  tip_int.cpp  tip_int.hpp  tip_mu.cpp  tip_mu.hpp  tip_var.cpp  tip_var.hpp
src/types/abstract/: Cons.cpp  Cons.h  Mu.cpp  Mu.h  Term.h  Var.cpp  Var.h
src/types/concrete/: TipAlpha.cpp  TipAlpha.h  TipCons.cpp  TipCons.h  TipFunction.cpp  TipFunction.h  TipInt.cpp  TipInt.h  TipMu.cpp  TipMu.h  TipRef.cpp  TipRef.h  TipType.cpp  TipType.h  TipVar.cpp  TipVar.h
src/types/constraints/: TypeConstraint.cpp  TypeConstraint.h  TypeConstraintVisitor.cpp  TypeConstraintVisitor.h
src/types/solver/: Unifier.cpp  Unifier.h
src/utils/: TIPtreeSimpleVisitor.cpp  TIPtreeSimpleVisitor.h
src/validators/: CMakeLists.txt  DeclarationsVisitor.cpp  DeclarationsVisitor.hpp  UniqueIdentifiersVisitor.cpp  UniqueIdentifiersVisitor.hpp
test/: err_unify3.tip  f_not_typable.tip  nphair.tip  nphair2.tip  short2.tip  short3.tip
test/unit/: CMakeLists.txt
test/unit/frontend/: ASTPrinterTest.cpp  CMakeLists.txt  PrettyPrinterTest.cpp  TIPParserTest.cpp
test/unit/frontend/treetypes/: ASTProgramTest.cpp
test/unit/helpers/: CMakeLists.txt  FriendlyNodeStringifier.cpp  FriendlyNodeStringifier.h
test/unit/matchers/: ExceptionContainsWhat.h
test/unit/semantic/: CMakeLists.txt  CheckAssignableTest.cpp  SymbolTableTest.cpp
test/unit/semantic/types/: CMakeLists.txt
test/unit/semantic/types/concrete/: TipAlphaTest.cpp  TipConsTest.cpp  TipFunctionTest.cpp  TipIntTest.cpp  TipMuTest.cpp  TipRecordTest.cpp  TipRefTest.cpp  TipVarTest.cpp
test/unit/semantic/types/constraints/: TypeConstraintCollectTest.cpp  TypeConstraintTest.cpp
test/unit/semantic/types/solvers/: UnifierTest.cpp  UnionFindTest.cpp  UnionFindTest2.cpp
test/unit/solvers/: CMakeLists.txt  ConsTest.cpp  MockTerms.h
test/unit/types/: CMakeLists.txt
test/unit/types/abstract/: ConsTest.cpp  MockTerms.h  MuTest.cpp  VarTest.cpp
test/unit/types/concrete/: TipIntTest.cpp  TipVarTest.cpp
test/unit/types/constraints/: ConstraintGenerationTest.cpp
