add_executable(types_test)
target_sources(types_test
        PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/abstract/ConsTest.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/abstract/MockTerms.h
        ${CMAKE_CURRENT_SOURCE_DIR}/abstract/MuTest.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/abstract/VarTest.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/concrete/TipAlphaTest.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/concrete/TipIntTest.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/concrete/TipMuTest.cpp
        #${CMAKE_CURRENT_SOURCE_DIR}/concrete/TipRefTest.cpp
        #${CMAKE_CURRENT_SOURCE_DIR}/concrete/TipVarTest.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/solvers/UnionFindTest.cpp
        )
target_include_directories(types_test
        PUBLIC
        ${CMAKE_SOURCE_DIR}/src/types/concrete
        ${CMAKE_SOURCE_DIR}/src/types/abstract
        ${CMAKE_SOURCE_DIR}/src/types/solver
        ${CMAKE_CURRENT_SOURCE_DIR}/abstract
        ${CMAKE_CURRENT_SOURCE_DIR}/concrete
        )
target_link_libraries(types_test types_lib tip_lib)
